# CS5030-project

./: .gitignore  CMakeLists.txt  MPI.cpp  Makefile  README.md  Task Splitting Project CS 5030.docx  distributedGPU.cu  distributedGPULaunch.cu  distributedGPUMPI.cpp  mpi_gpu_batch.sh  oldShared.cu  openMP  openMP.cpp  plot.py  savedGPU.cu  serial  serial.cpp  serial_normalized.cpp  sharedGPU.cpp  sharedGPU.cu  utils.h  utilsGPU.cpp  utilsGPU.h
Mike/: openmp  serial
SpotifyPlot/: plot.py  plot_scaling_study.py
mpi-cuda/__MACOSX/: ._mpi-cuda
mpi-cuda/__MACOSX/mpi-cuda/: ._CMakeLists.txt
mpi-cuda/mpi-cuda/: CMakeLists.txt  Makefile  hello_cuda.cu  mpi-cuda  mpi-cuda_hello.c
